2007-07-02  Jesse van den Kieboom  <jesse@icecrew.nl>

	* bindings/python/Makefile.am:
	* bindings/python/gedit.defs:
	* bindings/python/gedit.override:
	
	added bindings for gedit-language-manager
	
	* plugins/snippets/snippets/Manager.py:
	* plugins/snippets/snippets/WindowHelper.py:
	
	use gtksourceview2 instead of gtksourceview1 and use new language
	manager bindings
	
	* plugins/externaltools/tools/functions.py:
	* plugins/externaltools/tools/manager.py:
	
	use new language manager bindings
	
2007-07-01  Paolo Borelli  <pborelli@katamail.com>

	* plugins/taglist/gedit-taglist-plugin-parser.c: look up
	tags in .gnome2/gedit/taglist beside the legacy
	.gedit-2/plugins/taglist.

2007-07-01  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-language-dialog.c:

	remove unused include.

	* gedit/dialogs/gedit-preferences-dialog.glade:
	* gedit/dialogs/gedit-encodings-dialog.glade:

	remove uneeded <requires lib="gnome">

2007-07-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-tab.c: allow to save as when in the 
	EXTERNALLY_MODIFIED_NOTIFICATION state. Fixes bug #439184.

2007-06-30  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* gedit/gedit-print.c:
	* gedit/gedit-session.c:
	* gedit/gedit-tab.c:
	Fix about 20 gcc4 compiler warnings.

2007-06-30  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Helper.py: removed debug_print action which
	was accidentally committed

2007-06-30  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/: changed file names to more consistent ones
	(dropping the Snippet prefix). Created a new and improved parser for 
	snippets and abstracted it in Parser.py. Changed syntax of multiple
	default values for normal placeholders to: ${1:[def1,def2]} (was
	${1:def1:def2}) and changed system snippets accordingly. Changed syntax
	of python placeholder dependencies to $<[1,2]: return 'example'> (was
	$<1,2: return 'example'>) to be able to differentiate between