@@ -1,3 +1,10 @@
+2007-07-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* plugins/externaltools/tools/functions.py:
+	* plugins/externaltools/tools/manager.py:
+	
+	Fix a couple of problems in latest patch.
+
 2007-07-02  Jesse van den Kieboom  <jesse@icecrew.nl>
 
 	* bindings/python/Makefile.am:
